# VitaSport

./: .gitignore  API_ENDPOINTS.md  ARCHITECTURE.md  COMPILE_TIPS.md  CONTRIBUTING.md  DOCUMENTACION_COMPLETA_API.md  ENHANCEMENTS.md  GEMINI.md  GUIA_DE_INSTALACION.md  HISTORIAL_COPILOT.md  MANUAL_DE_USUARIO.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  README.md  README_TAURI.md  VitaSport-2.env  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js  vercel.json  vite.config.js  vite.config.ts
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml  test.yml
src/: App.tsx  index.css  server.js  tauri-bridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: product.api.test.js
src/components/: Button.tsx  Layout.tsx  Modal.tsx  ProductForm.tsx  StatCard.tsx
src/contexts/: AuthContext.tsx
src/controllers/: alertsController.js  inventoryController.js  productController.js  reportsController.js  salesController.js  statisticsController.js  stockController.js  userController.js
src/database/: database.js  migrate.js
src/hooks/: useDarkMode.ts
src/main/: main.js  preload.js
src/pages/: Dashboard.tsx  Inventory.tsx  Login.tsx  Products.tsx  Reports.tsx  Sales.tsx  Settings.tsx  Users.tsx
src/renderer/: config.js  dashboard.html  dashboard.js  index.html  renderer.js  security-utils.js  shell.html  tauri-bridge.js  ui-loader.js
src/renderer/react-app/: .env.example  BUILD_RESULTS.md  OPTIMIZATION_SUMMARY.md  README.md  (+7 more)
src/routes/: alertsRoutes.js  inventoryRoutes.js  productRoutes.js  reportsRoutes.js  salesRoutes.js  statisticsRoutes.js  stockRoutes.js  userRoutes.js
(+33 files in other folders)
