[package]
name = "vitasport"
version = "1.0.0"
description = "Sistema de Gestión de Inventario"
authors = ["KronoxYT"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-fs = "2.4.2"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
