[package]
name = "vitasport"
version = "1.0.0"
description = "Sistema de Gestión de Inventario"
authors = ["KronoxYT"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-fs = "2.4.2"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
bcrypt = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Perfil de desarrollo optimizado para velocidad de compilación
[profile.dev]
opt-level = 1  # Optimización mínima para compilar más rápido
incremental = true  # Compilación incremental
codegen-units = 256  # Más unidades = compilación más paralela

# Optimizar dependencias en modo dev (no tu código)
[profile.dev.package."*"]
opt-level = 2  # Las dependencias se optimizan más
debug = false  # Sin símbolos de debug en dependencias
